--- a/Assets/index.html
+++ b/Assets/index.html
@@ -40,13 +40,13 @@
             <div class="tr1">
                 <img src="/Assets/img/tr3.jpg" alt="">
                 <div>
-                    <h1> Bodh Gaya </h1>
+                    <h1> Rajgir </h1>
                 </div>
                 </div>
                 <div class="tr1">
                     <img src="/Assets/img/tr4.jpg" alt="">
                     <div>
-                        <h1> Bodh Gaya </h1>
+                        <h1> Patna </h1>
                     </div>
                     </div>
         </div>
