--- a/Assets/index.html
+++ b/Assets/index.html
@@ -16,7 +16,7 @@
         <a href="Home"> About </a>
         <a href="Home"> Tourism Place </a>
         <a href="Home"> Culture </a>
-        <a href="Home"> Contact Us </a>
+        <a href="Home"> Contact </a>
         <div class="float-right">
             <a class="btn btn-1" href="Login"> Login </a>
             <a class="btn btn-2" href="Register"> Register </a>
